src/test/ui/mismatched_types/unboxed-closures-vtable-mismatch.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/unboxed-closures-vtable-mismatch.rs:15:24
   |
LL | fn call_it<F:FnMut(isize,isize)->isize>(y: isize, mut f: F) -> isize {
   | -------------------------------------------------------------------- required by `call_it`
...
LL |     let f = to_fn_mut(|x: usize, y: isize| -> isize { (x as isize) + y });
   |                       ----------------------------- found signature of `fn(usize, isize) -> _`
LL |
LL |     let z = call_it(3, f);
   |                        ^ expected signature of `fn(isize, isize) -> _`

error: aborting due to previous error

